[package]
name = "dotnet_globalization"
version = "0.1.0"
edition = "2018"

[package.metadata.cargo-all-features]
skip_optional_dependencies = true

[lib]
crate-type = ["staticlib"]

[dependencies]
icu = { path = "../icu4x/components/icu" }
icu_provider = { path = "../icu4x/components/provider" }
# icu_provider_fs = { path = "../icu4x/components/provider_fs" }
